--- a/811PracticeBot2018/.classpath
+++ b/811PracticeBot2018/.classpath
@@ -7,8 +7,8 @@
 	<classpathentry kind="var" path="cscore" sourcepath="cscore.sources"/>
 	<classpathentry kind="var" path="wpiutil" sourcepath="wpiutil.sources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/cardinals/wpilib/user/java/lib/navx_frc.jar"/>
 	<classpathentry kind="var" path="USERLIBS_DIR/navx_frc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/cardinals/wpilib/user/java/lib/Pathfinder-Java.jar"/>
+	<classpathentry kind="var" path="USERLIBS_DIR/Pathfinder-Java-1.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/cardinals/wpilib/user/java/lib/libpathfinderjava.so"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
